--- a/index.html
+++ b/index.html
@@ -3,44 +3,153 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>에어컨 청소 전문가 - 메인</title>
+    <title>클린에어컨 — 고압 살균 세척 전문</title>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Noto+Sans+KR:wght@300;400;700;900&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Malgun Gothic', sans-serif; margin: 0; background: #f0f8ff; }
-        nav { background: #003366; padding: 20px; display: flex; justify-content: space-between; align-items: center; }
-        .logo { color: white; font-weight: bold; font-size: 2rem; text-decoration: none; }
-        nav ul { list-style: none; display: flex; gap: 20px; margin: 0; }
-        nav a { color: white; text-decoration: none; font-weight: bold; }
-        .pay-section { background: white; padding: 40px 20px; border-bottom: 5px solid #0055ff; text-align: center; }
-        .pay-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; max-width: 1200px; margin: 0 auto; }
-        .p-btn { display: flex; align-items: center; justify-content: center; height: 120px; border-radius: 20px; text-decoration: none; font-weight: 900; font-size: 1.6rem; color: white; box-shadow: 0 10px 20px rgba(0,0,0,0.2); transition: 0.3s; }
-        .n { background: #2ecc71; } .c { background: #e62117; } .k { background: #ffeb00; color: #3c1e1e; }
-        .s { background: #ffbe00; color: #000; } .a { background: #f39c12; } .g { background: #3498db; }
-        .hero { padding: 80px 20px; text-align: center; background: #0055ff; color: white; }
+        :root { --blue:#0055ff; --ice:#e8f4ff; --dark:#0a1628; --mid:#1a3a6b; --gold:#ffbe00; }
+        * { margin:0; padding:0; box-sizing:border-box; }
+        html { scroll-behavior:smooth; }
+        body { font-family:'Noto Sans KR',sans-serif; background:#fff; color:var(--dark); overflow-x:hidden; }
+        nav { position:fixed; top:0; left:0; right:0; z-index:1000; background:rgba(0,30,80,0.97); backdrop-filter:blur(12px); display:flex; justify-content:space-between; align-items:center; padding:0 60px; height:70px; border-bottom:2px solid rgba(0,85,255,0.4); }
+        .logo { font-family:'Black Han Sans',sans-serif; font-size:1.6rem; color:#fff; text-decoration:none; display:flex; align-items:center; gap:8px; }
+        .logo span { color:var(--gold); }
+        nav ul { list-style:none; display:flex; gap:8px; }
+        nav ul a { color:rgba(255,255,255,0.8); text-decoration:none; font-size:0.88rem; font-weight:700; padding:8px 16px; border:1px solid rgba(255,255,255,0.15); border-radius:4px; transition:all 0.3s; }
+        nav ul a:hover { color:#fff; border-color:var(--blue); background:rgba(0,85,255,0.2); }
+        .nav-cta { background:var(--blue) !important; color:#fff !important; border-color:var(--blue) !important; }
+        .hero { min-height:100vh; background:linear-gradient(160deg,var(--dark) 0%,var(--mid) 60%,#0033aa 100%); display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center; padding:100px 20px 60px; position:relative; overflow:hidden; }
+        .hero::before { content:''; position:absolute; inset:0; background:radial-gradient(ellipse 80% 60% at 50% 40%,rgba(0,85,255,0.15) 0%,transparent 70%); }
+        .hero-badge { font-size:0.75rem; letter-spacing:5px; color:var(--gold); font-weight:900; margin-bottom:24px; border:1px solid rgba(255,190,0,0.4); padding:6px 20px; border-radius:30px; background:rgba(255,190,0,0.08); position:relative; z-index:1; }
+        .hero h1 { font-family:'Black Han Sans',sans-serif; font-size:clamp(2.5rem,7vw,5.5rem); color:#fff; line-height:1.2; margin-bottom:24px; position:relative; z-index:1; }
+        .hero h1 .blue { color:#5599ff; }
+        .hero h1 .gold { color:var(--gold); }
+        .hero-sub { font-size:clamp(1rem,2.5vw,1.25rem); color:rgba(255,255,255,0.7); line-height:1.8; max-width:560px; margin:0 auto 50px; position:relative; z-index:1; }
+        .hero-btns { display:flex; gap:16px; justify-content:center; flex-wrap:wrap; position:relative; z-index:1; }
+        .btn-main { padding:18px 48px; background:var(--blue); color:#fff; font-weight:900; font-size:1rem; border:none; border-radius:6px; cursor:pointer; text-decoration:none; display:inline-block; box-shadow:0 8px 30px rgba(0,85,255,0.4); transition:all 0.3s; }
+        .btn-main:hover { background:#0044dd; transform:translateY(-3px); }
+        .btn-sub { padding:18px 48px; background:transparent; color:#fff; font-weight:700; font-size:1rem; border:2px solid rgba(255,255,255,0.3); border-radius:6px; cursor:pointer; text-decoration:none; display:inline-block; transition:all 0.3s; }
+        .btn-sub:hover { border-color:#fff; background:rgba(255,255,255,0.08); }
+        .stats { background:var(--dark); display:grid; grid-template-columns:repeat(4,1fr); border-top:1px solid rgba(0,85,255,0.3); }
+        .stat-item { padding:40px 20px; text-align:center; border-right:1px solid rgba(0,85,255,0.2); }
+        .stat-item:last-child { border-right:none; }
+        .stat-n { font-family:'Black Han Sans',sans-serif; font-size:2.8rem; color:var(--gold); display:block; }
+        .stat-l { font-size:0.82rem; color:rgba(255,255,255,0.6); margin-top:6px; font-weight:600; }
+        .features { padding:100px 60px; background:#fff; }
+        .sec-label { font-size:0.72rem; letter-spacing:5px; color:var(--blue); font-weight:900; display:block; margin-bottom:16px; text-transform:uppercase; }
+        .sec-h2 { font-family:'Black Han Sans',sans-serif; font-size:clamp(1.8rem,3.5vw,3rem); color:var(--dark); margin-bottom:60px; line-height:1.2; }
+        .feat-grid { display:grid; grid-template-columns:repeat(3,1fr); gap:30px; max-width:1200px; margin:0 auto; }
+        .feat-card { background:var(--ice); border-radius:16px; padding:40px 30px; border:1px solid rgba(0,85,255,0.1); transition:transform 0.3s,box-shadow 0.3s; }
+        .feat-card:hover { transform:translateY(-6px); box-shadow:0 20px 50px rgba(0,85,255,0.12); }
+        .feat-icon { font-size:2.5rem; margin-bottom:20px; display:block; }
+        .feat-title { font-family:'Black Han Sans',sans-serif; font-size:1.3rem; color:var(--dark); margin-bottom:12px; }
+        .feat-desc { font-size:0.92rem; color:#555; line-height:1.8; }
+        .gallery { padding:100px 0; background:#f8faff; }
+        .gallery-inner { max-width:1400px; margin:0 auto; padding:0 60px; }
+        .gallery-grid { display:grid; grid-template-columns:repeat(4,1fr); gap:16px; margin-top:60px; }
+        .g-card { background:#dde8f5; border-radius:12px; aspect-ratio:4/3; overflow:hidden; position:relative; display:flex; align-items:center; justify-content:center; border:1px solid rgba(0,85,255,0.15); transition:transform 0.3s; }
+        .g-card:hover { transform:scale(1.02); }
+        .g-card img { width:100%; height:100%; object-fit:cover; display:block; position:absolute; inset:0; }
+        .img-label { font-family:'Black Han Sans',sans-serif; font-size:1.2rem; color:rgba(0,85,255,0.35); letter-spacing:2px; position:relative; z-index:1; }
+        .process { padding:100px 60px; background:var(--dark); }
+        .proc-grid { display:grid; grid-template-columns:repeat(4,1fr); gap:20px; max-width:1200px; margin:60px auto 0; }
+        .proc-step { background:rgba(255,255,255,0.04); border:1px solid rgba(0,85,255,0.25); border-radius:12px; padding:36px 24px; text-align:center; }
+        .proc-num { font-family:'Black Han Sans',sans-serif; font-size:3rem; color:rgba(0,85,255,0.35); display:block; margin-bottom:16px; }
+        .proc-title { font-weight:900; color:#fff; font-size:1rem; margin-bottom:10px; }
+        .proc-desc { font-size:0.82rem; color:rgba(255,255,255,0.5); line-height:1.7; }
+        .cta-section { padding:120px 20px; text-align:center; background:linear-gradient(135deg,var(--blue) 0%,#0033aa 100%); }
+        .cta-section h2 { font-family:'Black Han Sans',sans-serif; font-size:clamp(2rem,4vw,3.5rem); color:#fff; margin-bottom:20px; }
+        .cta-section p { color:rgba(255,255,255,0.8); font-size:1.1rem; margin-bottom:50px; }
+        footer { background:#060f1f; padding:40px 60px; display:flex; justify-content:space-between; align-items:center; border-top:1px solid rgba(0,85,255,0.2); }
+        .foot-logo { font-family:'Black Han Sans',sans-serif; font-size:1.3rem; color:#fff; }
+        .foot-logo span { color:var(--gold); }
+        .foot-info { font-size:0.8rem; color:rgba(255,255,255,0.4); text-align:right; line-height:1.8; }
+        @media (max-width:1024px) {
+            nav { padding:0 20px; }
+            nav ul a { padding:6px 10px; font-size:0.8rem; }
+            .stats { grid-template-columns:repeat(2,1fr); }
+            .feat-grid { grid-template-columns:1fr; max-width:480px; margin:0 auto; }
+            .gallery-grid { grid-template-columns:repeat(2,1fr); }
+            .proc-grid { grid-template-columns:repeat(2,1fr); }
+            .features,.gallery-inner,.process { padding-left:20px; padding-right:20px; }
+            footer { flex-direction:column; gap:16px; text-align:center; padding:30px 20px; }
+            .foot-info { text-align:center; }
+        }
     </style>
 </head>
 <body>
-    <nav>
-        <a href="index.html" class="logo">❄️ 클린에어컨</a>
-        <ul>
-            <li><a href="index.html">홈</a></li>
-            <li><a href="about.html">서비스소개</a></li>
-            <li><a href="portfolio.html">청소사례</a></li>
-            <li><a href="contact.html">예약상담</a></li>
-        </ul>
-    </nav>
-    <section class="pay-section">
-        <h1 style="margin-bottom:20px;">❄️ 지금 결제하면 2만원 즉시 할인! ❄️</h1>
-        <div class="pay-grid">
-            <a href="#" class="p-btn n">네이버페이</a> <a href="#" class="p-btn c">쿠팡 구매</a> <a href="#" class="p-btn k">카카오페이</a>
-            <a href="#" class="p-btn s">쓱닷컴 구매</a> <a href="#" class="p-btn a">옥션 구매</a> <a href="#" class="p-btn g">G마켓 구매</a>
-        </div>
-    </section>
-    <div class="hero">
-        <h2>숨막히는 곰팡이, 완벽 분해 청소로 해결하세요!</h2>
-        <p>서울/경기 전 지역 1시간 내 방문 가능</p>
+<nav>
+    <a href="index.html" class="logo">❄️ 클린<span>에어컨</span></a>
+    <ul>
+        <li><a href="index.html">홈</a></li>
+        <li><a href="about.html">서비스소개</a></li>
+        <li><a href="portfolio.html">청소사례</a></li>
+        <li><a href="contact.html" class="nav-cta">예약상담</a></li>
+    </ul>
+</nav>
+<section class="hero">
+    <div class="hero-badge">❄️ 서울·경기 전 지역 1시간 내 방문</div>
+    <h1>숨막히는 곰팡이<br><span class="blue">완벽 분해 청소</span>로<br><span class="gold">해결하세요</span></h1>
+    <p class="hero-sub">단순 청소가 아닌 <strong>고압 살균 세척</strong>으로<br>가족의 건강을 지킵니다.</p>
+    <div class="hero-btns">
+        <a href="contact.html" class="btn-main">지금 예약하기</a>
+        <a href="portfolio.html" class="btn-sub">청소 사례 보기</a>
     </div>
-    <script>
-        document.querySelectorAll('.p-btn').forEach(b => b.addEventListener('click', e => { e.preventDefault(); alert("🚀 예약 폭주로 결제창 오픈 준비 중입니다!"); }));
-    </script>
+</section>
+<div class="stats">
+    <div class="stat-item"><span class="stat-n">5,000+</span><div class="stat-l">누적 시공 건수</div></div>
+    <div class="stat-item"><span class="stat-n">98%</span><div class="stat-l">고객 만족도</div></div>
+    <div class="stat-item"><span class="stat-n">1hr</span><div class="stat-l">방문 소요시간</div></div>
+    <div class="stat-item"><span class="stat-n">99.9%</span><div class="stat-l">살균 효과</div></div>
+</div>
+<section class="features">
+    <div style="max-width:1200px;margin:0 auto;">
+        <span class="sec-label">WHY CLEAN AIRCON</span>
+        <h2 class="sec-h2">왜 클린에어컨인가요?</h2>
+        <div class="feat-grid">
+            <div class="feat-card"><span class="feat-icon">🦠</span><div class="feat-title">고압 살균 세척</div><p class="feat-desc">일반 청소로는 제거되지 않는 곰팡이·세균을 고압 스팀으로 99.9% 살균합니다.</p></div>
+            <div class="feat-card"><span class="feat-icon">🔧</span><div class="feat-title">완전 분해 청소</div><p class="feat-desc">내부 부품까지 완전 분해하여 눈에 보이지 않는 오염까지 깨끗이 제거합니다.</p></div>
+            <div class="feat-card"><span class="feat-icon">⚡</span><div class="feat-title">1시간 내 완료</div><p class="feat-desc">서울·경기 전 지역 1시간 내 방문, 빠르고 깔끔하게 마무리합니다.</p></div>
+        </div>
+    </div>
+</section>
+<section class="gallery">
+    <div class="gallery-inner">
+        <span class="sec-label">WORK GALLERY</span>
+        <h2 class="sec-h2">실제 작업 사례</h2>
+        <div class="gallery-grid" id="gallery-grid"></div>
+    </div>
+</section>
+<section class="process">
+    <div style="max-width:1200px;margin:0 auto;">
+        <span class="sec-label">HOW IT WORKS</span>
+        <h2 class="sec-h2" style="color:#fff;">청소 과정</h2>
+        <div class="proc-grid">
+            <div class="proc-step"><span class="proc-num">01</span><div class="proc-title">예약 접수</div><p class="proc-desc">전화·온라인으로 간편하게 예약하세요.</p></div>
+            <div class="proc-step"><span class="proc-num">02</span><div class="proc-title">방문 진단</div><p class="proc-desc">전문가가 방문하여 에어컨 상태를 점검합니다.</p></div>
+            <div class="proc-step"><span class="proc-num">03</span><div class="proc-title">완전 분해 세척</div><p class="proc-desc">모든 부품을 분해하여 고압 살균 세척합니다.</p></div>
+            <div class="proc-step"><span class="proc-num">04</span><div class="proc-title">완료 확인</div><p class="proc-desc">작업 전·후 사진을 제공하고 깔끔히 마무리합니다.</p></div>
+        </div>
+    </div>
+</section>
+<section class="cta-section">
+    <h2>지금 바로 예약하세요!</h2>
+    <p>성수기 전 미리 예약하면 더 빠른 방문이 가능합니다.</p>
+    <a href="contact.html" class="btn-main" style="font-size:1.1rem;padding:22px 60px;">무료 상담 예약하기</a>
+</section>
+<footer>
+    <div class="foot-logo">❄️ 클린<span>에어컨</span></div>
+    <div class="foot-info">서울·경기 전 지역 서비스<br>© 2025 클린에어컨. All rights reserved.</div>
+</footer>
+<script>
+    const BASE = "https://raw.githubusercontent.com/kimsukpil1-collab/neago_clean/main/";
+    const imgNums = ['01','02','03','04','05','06','07','08','09','10','11','12'];
+    const grid = document.getElementById('gallery-grid');
+    imgNums.forEach(num => {
+        const card = document.createElement('div');
+        card.className = 'g-card';
+        card.innerHTML = `<img src="${BASE}${num}.jpg" alt="작업사례" onerror="this.style.display='none'"><div class="img-label">${num}.jpg</div>`;
+        grid.appendChild(card);
+    });
+</script>
 </body>
 </html>
