--- a/portfolio.html
+++ b/portfolio.html
@@ -3,30 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>청소 사례</title>
+    <title>청소사례 — 클린에어컨</title>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Noto+Sans+KR:wght@300;400;700;900&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Malgun Gothic', sans-serif; margin: 0; background: #eee; }
-        nav { background: #003366; padding: 20px; display: flex; justify-content: space-between; }
-        nav a { color: white; text-decoration: none; font-weight: bold; padding: 0 10px; }
-        .container { max-width: 1000px; margin: 20px auto; background: white; padding: 30px; border-radius: 20px; text-align: center; }
-        .pay-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; margin-top: 30px; }
-        .p-btn { display: flex; align-items: center; justify-content: center; height: 100px; border-radius: 15px; color: white; text-decoration: none; font-weight: 900; font-size: 1.3rem; }
-        .n { background: #2ecc71; } .c { background: #e62117; } .k { background: #ffeb00; color: #3c1e1e; }
-        .s { background: #ffbe00; color: #000; } .a { background: #f39c12; } .g { background: #3498db; }
+        :root { --blue:#0055ff; --ice:#e8f4ff; --dark:#0a1628; --mid:#1a3a6b; --gold:#ffbe00; }
+        * { margin:0; padding:0; box-sizing:border-box; }
+        body { font-family:'Noto Sans KR',sans-serif; background:#f8faff; color:var(--dark); }
+        nav { position:fixed; top:0; left:0; right:0; z-index:1000; background:rgba(0,30,80,0.97); backdrop-filter:blur(12px); display:flex; justify-content:space-between; align-items:center; padding:0 60px; height:70px; border-bottom:2px solid rgba(0,85,255,0.4); }
+        .logo { font-family:'Black Han Sans',sans-serif; font-size:1.6rem; color:#fff; text-decoration:none; }
+        .logo span { color:var(--gold); }
+        nav ul { list-style:none; display:flex; gap:8px; }
+        nav ul a { color:rgba(255,255,255,0.8); text-decoration:none; font-size:0.88rem; font-weight:700; padding:8px 16px; border:1px solid rgba(255,255,255,0.15); border-radius:4px; transition:all 0.3s; }
+        nav ul a:hover { color:#fff; border-color:var(--blue); background:rgba(0,85,255,0.2); }
+        .nav-cta { background:var(--blue) !important; color:#fff !important; border-color:var(--blue) !important; }
+        .page-hero { padding:140px 60px 80px; background:linear-gradient(160deg,var(--dark),var(--mid)); text-align:center; }
+        .page-hero h1 { font-family:'Black Han Sans',sans-serif; font-size:clamp(2rem,5vw,4rem); color:#fff; margin-bottom:16px; }
+        .page-hero p { color:rgba(255,255,255,0.65); font-size:1.05rem; }
+        .sec-label { font-size:0.72rem; letter-spacing:5px; color:var(--blue); font-weight:900; display:block; margin-bottom:16px; text-transform:uppercase; }
+        .sec-h2 { font-family:'Black Han Sans',sans-serif; font-size:clamp(1.8rem,3vw,2.8rem); color:var(--dark); margin-bottom:50px; }
+        .gallery-section { padding:100px 60px; }
+        .gallery-grid { display:grid; grid-template-columns:repeat(3,1fr); gap:20px; max-width:1400px; margin:0 auto; }
+        .g-card { background:#dde8f5; border-radius:14px; aspect-ratio:4/3; overflow:hidden; position:relative; display:flex; align-items:center; justify-content:center; border:1px solid rgba(0,85,255,0.15); transition:transform 0.3s,box-shadow 0.3s; }
+        .g-card:hover { transform:translateY(-4px); box-shadow:0 16px 40px rgba(0,85,255,0.12); }
+        .g-card img { width:100%; height:100%; object-fit:cover; display:block; position:absolute; inset:0; }
+        .img-label { font-family:'Black Han Sans',sans-serif; font-size:1.3rem; color:rgba(0,85,255,0.35); letter-spacing:2px; position:relative; z-index:1; }
+        .cta-section { padding:100px 20px; text-align:center; background:linear-gradient(135deg,var(--blue),#0033aa); }
+        .cta-section h2 { font-family:'Black Han Sans',sans-serif; font-size:clamp(2rem,4vw,3rem); color:#fff; margin-bottom:16px; }
+        .cta-section p { color:rgba(255,255,255,0.8); margin-bottom:40px; font-size:1.05rem; }
+        .btn-main { padding:18px 48px; background:#fff; color:var(--blue); font-weight:900; font-size:1rem; border:none; border-radius:6px; cursor:pointer; text-decoration:none; display:inline-block; transition:all 0.3s; }
+        .btn-main:hover { transform:translateY(-3px); box-shadow:0 12px 30px rgba(0,0,0,0.2); }
+        footer { background:#060f1f; padding:40px 60px; display:flex; justify-content:space-between; align-items:center; border-top:1px solid rgba(0,85,255,0.2); }
+        .foot-logo { font-family:'Black Han Sans',sans-serif; font-size:1.3rem; color:#fff; }
+        .foot-logo span { color:var(--gold); }
+        .foot-info { font-size:0.8rem; color:rgba(255,255,255,0.4); text-align:right; line-height:1.8; }
+        @media (max-width:1024px) {
+            nav { padding:0 20px; }
+            nav ul a { padding:6px 10px; font-size:0.8rem; }
+            .gallery-section { padding:80px 20px; }
+            .gallery-grid { grid-template-columns:repeat(2,1fr); }
+            footer { flex-direction:column; gap:16px; padding:30px 20px; text-align:center; }
+            .foot-info { text-align:center; }
+            .page-hero { padding:120px 20px 60px; }
+        }
     </style>
 </head>
 <body>
-    <nav><a href="index.html" style="font-size:1.5rem">❄️ 클린에어컨</a><div><a href="about.html">소개</a><a href="portfolio.html">사례</a><a href="contact.html">예약</a></div></nav>
-    <div class="container">
-        <h1>실제 작업 갤러리</h1>
-        <img src="https://images.unsplash.com/photo-1621905252507-b354bcadcabc?auto=format&fit=crop&w=800&q=80" style="width:100%; border-radius:15px;">
-        <div class="pay-grid">
-            <a href="#" class="p-btn n">네이버 예약</a> <a href="#" class="p-btn c">쿠팡 예약</a> <a href="#" class="p-btn k">카카오 예약</a>
-            <a href="#" class="p-btn s">쓱닷컴 예약</a> <a href="#" class="p-btn a">옥션 예약</a> <a href="#" class="p-btn g">G마켓 예약</a>
-        </div>
+<nav>
+    <a href="index.html" class="logo">❄️ 클린<span>에어컨</span></a>
+    <ul>
+        <li><a href="index.html">홈</a></li>
+        <li><a href="about.html">서비스소개</a></li>
+        <li><a href="portfolio.html">청소사례</a></li>
+        <li><a href="contact.html" class="nav-cta">예약상담</a></li>
+    </ul>
+</nav>
+<section class="page-hero">
+    <h1>실제 작업 사례</h1>
+    <p>직접 촬영한 청소 전·후 사진입니다</p>
+</section>
+<section class="gallery-section">
+    <div style="max-width:1400px;margin:0 auto;">
+        <span class="sec-label">WORK GALLERY</span>
+        <h2 class="sec-h2">청소 사례 갤러리</h2>
+        <div class="gallery-grid" id="gallery-grid"></div>
     </div>
-    <script>
-        document.querySelectorAll('.p-btn').forEach(b => b.addEventListener('click', e => { e.preventDefault(); alert("🚀 예약 폭주로 결제창 오픈 준비 중입니다!"); }));
-    </script>
+</section>
+<section class="cta-section">
+    <h2>내 에어컨도 이렇게!</h2>
+    <p>지금 바로 예약하고 깨끗한 공기를 마시세요.</p>
+    <a href="contact.html" class="btn-main">예약 상담하기</a>
+</section>
+<footer>
+    <div class="foot-logo">❄️ 클린<span>에어컨</span></div>
+    <div class="foot-info">서울·경기 전 지역 서비스<br>© 2025 클린에어컨. All rights reserved.</div>
+</footer>
+<script>
+    const BASE = "https://raw.githubusercontent.com/kimsukpil1-collab/neago_clean/main/";
+    const imgNums = ['01','02','03','04','05','06','07','08','09','10','11','12','13','14','15','16','17','18','19','20','21','22','23','24'];
+    const grid = document.getElementById('gallery-grid');
+    imgNums.forEach(num => {
+        const card = document.createElement('div');
+        card.className = 'g-card';
+        card.innerHTML = `<img src="${BASE}${num}.jpg" alt="청소사례" onerror="this.style.display='none'"><div class="img-label">${num}.jpg</div>`;
+        grid.appendChild(card);
+    });
+</script>
 </body>
 </html>
