--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@
         <div style="background: rgba(102, 126, 234, 0.05); padding: 20px; border-radius: 15px; margin-top: 35px; display: flex; justify-content: space-between; align-items: center; box-shadow: inset 2px 2px 5px #d1d9e6, inset -2px -2px 5px #ffffff;">
             <div style="flex: 1;">
                 <div style="font-size: 12px; color: #888; margin-bottom: 8px; font-weight: 700; letter-spacing: 0.5px;">📎 첨부파일 전송 이메일</div>
-                <div style="font-size: 16px; color: var(--primary); font-weight: 700;">kimsukpil1@gmail.com</div>
+                <div style="font-size: 16px; color: var(--primary); font-weight: 700;">kimsukpil1&#64;gmail&#46;com</div>
             </div>
             <button onclick="copyEmail()" style="padding: 10px 20px; background: #e0e5ec; color: #666; border: none; border-radius: 10px; font-size: 13px; font-weight: 700; cursor: pointer; box-shadow: 5px 5px 10px #bec3c9, -5px -5px 10px #ffffff; transition: all 0.2s;">주소 복사</button>
         </div>
@@ -1053,7 +1053,7 @@
 
 <script>
     function copyEmail() {
-        const email = 'kimsukpil1@gmail.com';
+        const email = 'kimsukpil1' + '@' + 'gmail.com';
         navigator.clipboard.writeText(email).then(() => {
             alert('이메일 주소가 복사되었습니다! 📋');
         }).catch(() => {
@@ -1092,11 +1092,4 @@
         // 4초 후 초기화
         setTimeout(() => {
             document.getElementById('success-overlay').style.display = 'none';
-            document.getElementById('product-name').value = '';
-            document.getElementById('user-contact').value = '';
-            window.scrollTo({ top: 0, behavior: 'smooth' });
-        }, 4000);
-    }
-</script>
-</body>
-</html>
+        
