--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 
 <nav>
     <a href="index.html" class="logo">❄️ 클린<span>에어컨</span></a>
+    <div style="color:#ffbe00;font-weight:900;font-size:0.95rem;margin-right:8px;">📞 010-7928-8645</div>
     <ul>
         <li><a href="index.html">홈</a></li>
         <li><a href="about.html">서비스소개</a></li>
@@ -105,6 +106,7 @@
         <p>고압 스팀 살균 · 완전 분해 세척<br>작업 전·후 사진 제공 · 친환경 세제 사용</p>
         <div class="hero-btns">
             <a href="contact.html" class="btn-gold">🗓️ 지금 예약하기</a>
+            <div style="margin-top:14px;color:rgba(255,255,255,0.9);font-size:0.95rem;font-weight:700;">📞 010-7928-8645<br><span style="font-size:0.78rem;color:rgba(255,255,255,0.6);font-weight:400;">문자메세지로 에어컨 기종·대수를 보내신 후 상담받으세요</span></div>
             <a href="about.html" class="btn-outline">서비스 알아보기</a>
         </div>
         <div class="stats">
@@ -164,6 +166,7 @@
         </div>
         <div style="text-align:center;margin-top:40px;">
             <a href="about.html" class="btn-main" style="background:var(--blue);color:#fff;">자세한 서비스 보기</a>
+            <div style="margin-top:14px;color:#333;font-size:0.92rem;font-weight:700;">📞 010-7928-8645<br><span style="font-size:0.78rem;color:#888;font-weight:400;">문자메세지로 에어컨 기종·대수를 보내신 후 상담받으세요</span></div>
         </div>
     </div>
 </section>
@@ -173,11 +176,16 @@
     <h2>성수기 전에 미리 예약하세요!</h2>
     <p>6~8월 성수기엔 예약이 꽉 찹니다. 지금 예약하면 더 빠른 방문이 가능해요.</p>
     <a href="contact.html" class="btn-main">무료 상담 예약하기</a>
+    <div style="margin-top:20px;color:rgba(255,255,255,0.9);font-size:1rem;font-weight:700;">📞 010-7928-8645<br><span style="font-size:0.82rem;color:rgba(255,255,255,0.65);font-weight:400;">문자메세지로 에어컨 기종·대수를 보내신 후 상담받으세요</span></div>
 </section>
 
 <footer>
+    <div>
     <div class="foot-logo">❄️ 클린<span>에어컨</span></div>
-    <div class="foot-info">서울·경기 전 지역 서비스<br>© 2025 클린에어컨. All rights reserved.</div>
+    <div style="color:#ffbe00;font-weight:700;font-size:0.95rem;margin-top:8px;">📞 010-7928-8645</div>
+    <div style="color:rgba(255,255,255,0.45);font-size:0.75rem;margin-top:4px;">문자메세지로 기종·대수 보내신 후 상담받으세요</div>
+</div>
+    <div class="foot-info">서울·경기 전 지역 서비스<br>© 2026 클린에어컨. All rights reserved.</div>
 </footer>
 
 </body>
